--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
                 <div class="brand-logo">
                     <a href="#" class="logo">INLUENCER</a>
                 </div>
+                <div id="toggle-menu" class="mobile-menu">
+                    <!-- <button class="nav-toggle-menu"><i class="fas fa-bars"></i></button> -->
+
+                    <input type="checkbox" />
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <ul id="menu">
+                        <li><a href="#" class="menu-link active"> Home</a></li>
+                        <li><a href="#" class="menu-link"> Products</a></li>
+                        <li><a href="#" class="menu-link"> Sign up</a></li>
+                        <li><a href="#" class="menu-link"> Log In</a></li>
+                    </ul>
+
+                </div>
                 <div class="nav-menus">
                     <ul class="menu">
                         <li><a href="#" class="menu-link active"> Home</a></li>
