--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
                     <a href="#" class="logo">INLUENCER</a>
                 </div>
                 <div id="toggle-menu" class="mobile-menu">
-                    <!-- <button class="nav-toggle-menu"><i class="fas fa-bars"></i></button> -->
-
                     <input type="checkbox" />
                     <span></span>
                     <span></span>
@@ -31,7 +29,6 @@
                         <li><a href="#" class="menu-link"> Sign up</a></li>
                         <li><a href="#" class="menu-link"> Log In</a></li>
                     </ul>
-
                 </div>
                 <div class="nav-menus">
                     <ul class="menu">
@@ -113,8 +110,7 @@
                             <i class="fas fa-star-half-alt"></i>
                             <span class="rating">4.99</span>
                         </div>
-                        <p>Wordwide shifting available
-                            Buyers protection possible!</p>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
                     </div>
                 </article>
                 
@@ -171,8 +167,7 @@
                             <i class="fas fa-star-half-alt"></i>
                             <span class="rating">4.99</span>
                         </div>
-                        <p>Wordwide shifting available
-                            Buyers protection possible!</p>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
                     </div>
                 </article>
 
@@ -210,8 +205,7 @@
                             <i class="fas fa-star-half-alt"></i>
                             <span class="rating">4.99</span>
                         </div>
-                        <p>Wordwide shifting available
-                            Buyers protection possible!</p>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
                     </div>
                 </article>
 
@@ -230,8 +224,7 @@
                             <i class="fas fa-star-half-alt"></i>
                             <span class="rating">4.99</span>
                         </div>
-                        <p>Wordwide shifting available
-                            Buyers protection possible!</p>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
                     </div>
                 </article>
 
@@ -250,8 +243,7 @@
                             <i class="fas fa-star-half-alt"></i>
                             <span class="rating">4.99</span>
                         </div>
-                        <p>Wordwide shifting available
-                            Buyers protection possible!</p>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
                     </div>
                 </article>
 
@@ -270,8 +262,7 @@
                             <i class="fas fa-star-half-alt"></i>
                             <span class="rating">4.99</span>
                         </div>
-                        <p>Wordwide shifting available
-                            Buyers protection possible!</p>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
                     </div>
                 </article>
             </div>
