--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="banner-layout grid">
                 <div class="banner-content">
                     <h1 class="title">Start your Journey as Influencer</h1>
-                    <p class="banner-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <p class="banner-text">Fortunately, there are some simple ways you can introduce yourself to an influencer and hopefully get noticed.</p>
                     <a href="#" class="btn booking-btn">Preebook now <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
                 <div class="img-area">
