img border added

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <div class="container">
             <div class="subscribe-layout grid">
                 <div class="img-area">
-                    <figure class="img-box">
+                    <figure class="img-box img__border">
                         <img src="./assets/images/camera2.png" alt="influencer main-camera">
                     </figure>
                 </div>
